templates/style.scss
@import "lib/bourbon/bourbon";
@import "lib/neat/neat";


$font-stack: 'Maven Pro', sans-serif;

$widescreen: new-breakpoint(min-width 1080px);
$mobile: new-breakpoint(max-width 640px);

$default-background-color: #ffffff;
$widescreen-background-color: #DDE2E3;
$header-color: #00A7E2;


body {
    height: 101%;

    font-family: $font-stack;
    font-color: #333;

    background-color: $default-background-color;
    @include media($widescreen) {
        background-color: $widescreen-background-color;
    }
}

a, a:hover { color: #333; }

p {
    line-height: 1.4em;
    font-size: 1.2em;
}


/* structure */

.wrap {
    @include outer-container();
    margin: 15px auto 30px auto;
    padding: 5px 5px 5px 5px;
    background-color: $default-background-color;

    @include media($widescreen) {
        padding: 20px 20px 40px 20px;
    }

    .map {
        @include span-columns(12);
        @include omega();

        height: 500px;
        @include media($widescreen) {
            height: 600px;
        }
        @include media($mobile) {
            height: 400px;
        }
    }

    .header {
        @include span-columns(12);
        @include omega();

        background-color: $header-color;
        margin: 15px 0 15px 0;

        h1 {
            padding: 0 10px 0 10px;
            color: white;
            font-size: 1.6em;
        }
        .tagline {
            @include media($mobile) {
                display: none;
            }
        }
    }

    .content {
        @include span-columns(12);

        .copy {
            @include span-columns(6);

            @include media($mobile) {
                @include span-columns(12);
            }

            .one-column-copy {
                display: none;
                @include media($mobile) {
                    display: inline;
                }
            }

            .two-column-copy {
                display: inline;
                @include media($mobile) {
                    display: none;
                }
            }
        }

        .chart {
            @include span-columns(6);
            @include omega();

            @include media($mobile) {
                @include span-columns(12);
            }

            .outage-chart { width: 95%; }
        }
    }

    .footer {
        margin-top: 10px;
        @include span-columns(12);
        @include omega();

        @include media($widescreen) {
            margin-top: 30px;
        }
    }
}


/* style for marker popups */

.markerBox {
    margin-bottom: 20px;
    width: 240px;
    @include media($widescreen) {
        width: 300px;
    }

    h2 { margin: 0; padding: 0; }
    h4 { margin: 3px 0 9px 3px; padding: 0; }

    .markerTimeline {
        width: 100%;
        height: 100px;
        @include media($widescreen) {
            height: 150px;
        }
        // width: 260px;   // XXX of 100%?
        margin: -10px 0 0 0;
        clear: both;
    }

    .markerGraph {
        width: 100%;
        height: 100px;
        @include media($widescreen) {
            height: 150px;
        }
        // width: 260px;
        margin: 0 0 0 0;
        clear: both;
    }

    .graphNote {
        margin-bottom: 0px;
        margin-right: 20px;
        font-size: 1em;
        text-align: right;
    }
}

